# JerryHobby-next

./: .gitignore  BUILD.md  CLASSNOTES.md  DESIGN.md  Makefile  README.md  airport_data_loader.sh  auth.ts  build.sh  middleware-disable.ts  next.config.js  package-lock.json  package.json  rsync.sh  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  webpack.config.js
app/: GoogleAnalytics.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  reactMarkdown.css
app/admin/: layout.tsx  page.tsx
app/airports/: page.tsx  searchForm.tsx
app/articles/: CategoryBadge.tsx  CategoryFilter.tsx  page.tsx
app/auth/: provider.tsx
app/buildProcess/: junk.md  page.tsx
app/chess/: Cargo.toml  LICENSE_MIT  Makefile  page.tsx
app/chess/src/: lib.rs
app/components/: AddToCart.tsx  Certificates.tsx  ContentBox.tsx  Footer.tsx  HeavyComponent.tsx  NavBar.tsx  ShowMarkdown.tsx  Title.tsx  YouTubeEmbed.css  YoutubeEmbed.js
app/contact/: page.tsx
app/experience/: page.tsx
app/leadership/: page.tsx
app/models/: UseArticle.tsx  UseArticles.tsx  UseCategories.tsx  UsePages.tsx  UseProjects.tsx  validationSchemas.tsx
app/projects/: page.tsx
app/resume/: page.tsx
app/sentry-example-page/: page.jsx
app/snake/: page.tsx
app/snake-demo/: Cargo.toml  Makefile  page.tsx  snake.tsx
app/snake_game/: bootstrap.js  index.html  index.ts  page.tsx  page2.tsx  snake_game.module.css
app/technical/: page.tsx
app/upload/: page.tsx
emails/: WelcomeTemplate.tsx
prisma/: schema.prisma
(+107 files in other folders)
