[package]
name = "chess"
version = "0.1.0"
authors = ["Jerry Hobby <Jerry@JerryHobby.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.74"
wee_alloc = "0.4.5"
console_error_panic_hook = { version = "0.1.5", optional = true }


